--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bardoqi/repository",
+    "name": "awes-io/repository",
     "description": "Implementation of repository pattern for Laravel. The package allows out-of-the-box filtering of data based on parameters in the <b>request</b>, and also allows you to quickly integrate the list filters and custom criteria.",
     "type": "library",
     "license": "MIT",
@@ -14,11 +14,6 @@
 			"name": "Galymzhan Begimov",
 			"email": "begimov@gmail.com",
 			"homepage": "https://github.com/begimov"
-		},
-		{
-			"name": "Bardo  Qi",
-			"email": "bardoqi@gmail.com",
-			"homepage": "https://github.com/bardoqi"
 		}
 	],
 	"support": {
